[project]
name = "nf-2"
version = "0.1.0"
description = "Code Plagiarism Detection System using AI-generated code comparison"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[google-genai]>=1.4.1",
    "crewai-tools>=0.9.0",
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.2.1",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "google-genai>=1.52.0",
]
